<resources>
    <string name="app_name">MyExpert</string>
    <string name="empty" />
    <string name="set_api_key">APIキーをセットしてください。</string>
    <string name="api_key_hint">APIキー取得方法について</string>
    <string name="check_and_set_api_key_hint">チェック＆セット</string>
    <string name="send">送信</string>
    <string name="chat_message_hint">質問を入力してください</string>
    <string name="selection">選択</string>
    <string name="history">履歴</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="are_you_sure_delete">削除しますか？</string>
    <string name="hello_and_welcome">こんにちは\nMyExpertへようこそ</string>
    <string name="next">次へ</string>
    <string name="start">始める</string>
    <string name="explain_about_this_app">MyExpertは\nchatGPTをあなたの先生として\nカスタマイズするアプリです。</string>
    <string name="what_is_api_key">APIキーとは</string>
    <string name="explain_about_api_key">APIキーは、APIを使用するためのパスワードのようなものです。APIを利用する人が認証され、利用制限を設けるために使われます。APIキーを他人に知られないようにすることも大切です。</string>
    <string name="acquisition_procedure_1">APIキー取得手順１</string>
    <string name="for_person_already_has_account">OpenAIのアカウントを作成する\n※すでにアカウントがある場合は、手順2へ</string>
    <string name="site_how_to_create_account">アカウントの作成手順の解説外部サイト\nhttps://yakiimosan.com/openai-register/</string>
    <string name="acquisition_procedure_2">APIキー取得手順２</string>
    <string name="link_create_api_key">以下にアクセスしてAPIキーを作成、コピー\nhttps://platform.openai.com/account/api-keys</string>
    <string name="please_fill_profile_area">プロフィールを入力してください。</string>
    <string name="asterisk">*</string>
    <string name="sex">性別</string>
    <string name="sex_man">男性</string>
    <string name="sex_woman">女性</string>
    <string name="sex_other">その他</string>
    <string name="age">年齢</string>
    <string name="sai">歳</string>
    <string name="complete">完了</string>
    <string name="lets_select_and_ask_question">職業を選択して質問してみましょう。</string>
    
    <!--  専門家カテゴリー  -->
    <string name="teacher">先生</string>
    <string name="medical">医療</string>
    <string name="it">IT</string>
    <string name="specialist">専門家</string>
    <string name="global">海外</string>
    
    <!--  専門家名称  -->
    <string name="kindergarten_teacher">幼稚園の先生</string>
    <string name="middle_school_teacher">中学校の先生</string>
    <string name="high_school_teacher">高校の先生</string>
    <string name="professor_of_linguistics">言語学の教授</string>
    <string name="professor_of_physics">物理学の教授</string>
    <string name="professor_of_philosophy">哲学の教授</string>
    <string name="professor_of_economics">経済学の教授</string>
    <string name="professor_of_mathematics">数学の教授</string>

    <string name="doctor">医者</string>
    <string name="nurse">看護師</string>
    <string name="dentist">歯科医師</string>
    <string name="physical_therapist">理学療法士</string>
    <string name="psychological_counselor">心理カウンセラー</string>

    <string name="software_engineer">ソフトウェアエンジニア</string>
    <string name="mechanical_engineer">機械エンジニア</string>
    <string name="web_designer">webデザイナー</string>
    
    <string name="lawyer">弁護士</string>
    <string name="accountant">会計士</string>
    <string name="tax_accountant">税理士</string>
    <string name="member_of_parliament">国会議員</string>

    <string name="english_teacher">英語の先生</string>
    <string name="chinese_teacher">中国語の先生</string>
    <string name="korean_teacher">韓国語の先生</string>
    <string name="french_teacher">フランス語の先生</string>
    <string name="russian_teacher">ロシア語の先生</string>
    <string name="german_teacher">ドイツ語の先生</string>
    <string name="ainu_teacher">アイヌ語の先生</string>
</resources>