<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="250dp"
        tools:context=".fragments.SetApiKeyFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/set_api_key" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/apiKeyTextField"
            android:layout_width="300dp"
            android:layout_marginTop="20dp"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/check_and_register_api_key"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/check_and_set_api_key_hint" />

        <TextView
            android:id="@+id/api_key_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:textSize="15sp"
            android:textColor="@color/purple_700"
            android:text="@string/api_key_hint" />
    </LinearLayout>
</layout>